copying over changes from develop branch

--- a/documentation/operators.html
+++ b/documentation/operators.html
@@ -687,11 +687,13 @@ operators.</p>
 <li><a href="/documentation/operators/first.html"><code>FirstOrDefault</code></a></li>
 <li><a href="/documentation/operators/first.html"><code>firstOrElse</code></a></li>
 <li><a href="/documentation/operators/flatmap.html"><strong><code>FlatMap</code></strong></a></li>
+<li><a href="/documentation/operators/flatmap.html"><code>flatMapFirst</code></a></li>
 <li><a href="/documentation/operators/flatmap.html"><code>flatMapIterable</code></a></li>
 <li><a href="/documentation/operators/flatmap.html"><code>flatMapIterableWith</code></a></li>
 <li><a href="/documentation/operators/flatmap.html"><code>flatMapLatest</code></a></li>
 <li><a href="/documentation/operators/flatmap.html"><code>flatMapObserver</code></a></li>
 <li><a href="/documentation/operators/flatmap.html"><code>flatMapWith</code></a></li>
+<li><a href="/documentation/operators/flatmap.html"><code>flatMapWithMaxConcurrent</code></a></li>
 <li><a href="/documentation/operators/flatmap.html"><code>flat_map_with_index</code></a></li>
 <li><a href="/documentation/operators/merge.html"><code>flatten</code></a></li>
 <li><a href="/documentation/operators/merge.html"><code>flattenDelayError</code></a></li>
@@ -844,6 +846,8 @@ operators.</p>
 <li><a href="/documentation/operators/flatmap.html"><code>selectManyObserver</code></a></li>
 <li><a href="/documentation/operators/switch.html"><code>select_switch</code></a></li>
 <li><a href="/documentation/operators/flatmap.html"><code>selectSwitch</code></a></li>
+<li><a href="/documentation/operators/flatmap.html"><code>selectSwitchFirst</code></a></li>
+<li><a href="/documentation/operators/flatmap.html"><code>selectWithMaxConcurrent</code></a></li>
 <li><a href="/documentation/operators/filter.html"><code>select_with_index</code></a></li>
 <li><a href="/documentation/operators/from.html"><code>seq</code></a></li>
 <li><a href="/documentation/operators/sequenceequal.html"><strong><code>SequenceEqual</code></strong></a></li>
