--- a/documentation/operators/empty-never-throw.html
+++ b/documentation/operators/empty-never-throw.html
@@ -306,7 +306,7 @@ error: error - badness
         <div class="panel-heading" role="tab" id="headingRxJS">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseRxJS" aria-expanded="true" aria-controls="collapseRxJS">
-              RxJS <code>empty never throw throwError</code>
+              RxJS <code>empty never throw</code>
             </a>
           </h4>
         </div>
@@ -315,7 +315,7 @@ error: error - badness
             
      <p>
       RxJS implements these operators as <code>empty</code>, <code>never</code>, and
-      <code>throw</code> (alias <code>throwError</code>).
+      <code>throw</code>.
      </p>
      <h4>Sample Code</h4>
      <div class="code javascript"><pre>
@@ -368,7 +368,7 @@ Error: Error: error!</pre></div>
       <li><code>rx.lite.compat.js</code></li>
      </ul>
      <p>
-      <code>throw</code>/<code>throwError</code> is found in the following distributions:
+      <code>throw</code> is found in the following distributions:
      </p>
      <ul>
       <li><code>rx.js</code></li>
