--- a/documentation/subject.html
+++ b/documentation/subject.html
@@ -248,8 +248,8 @@
  </p><p>
   If you use a <code>ReplaySubject</code> as an observer, take care not to call its <code>onNext</code> method
   (or its other <code>on</code> methods) from multiple threads, as this could lead to coincident
-  (non-sequential) calls, which violates the Observable contract and creates an ambiguity in the resulting
-  Subject as to which item or notification should be replayed first.
+  (non-sequential) calls, which violates <a href="contract.html">the Observable contract</a> and creates an
+  ambiguity in the resulting Subject as to which item or notification should be replayed first.
  </p></figcaption>
 </figure>
 
