copy over recent changes from "develop" branch

--- a/community.html
+++ b/community.html
@@ -128,6 +128,8 @@
 <li><a href="http://groups.google.com/d/forum/rxjava">Google Group RxJava</a></li>
 <li>Twitter <a href="http://twitter.com/RxJava">@RxJava</a></li>
 <li><a href="https://github.com/ReactiveX/RxJava/issues">GitHub Issues</a></li>
+<li><a href="https://gitter.im/ReactiveX/RxJava">Glitter RxJava room</a>A</li>
+<li><a href="https://speakerdeck.com/search?utf8=%E2%9C%93&amp;q=rxjava">Speakerdeck</a></li>
 </ul>
 
 <h2 id="rxjs">RxJS</h2>
