--- a/documentation/operators/observeon.html
+++ b/documentation/operators/observeon.html
@@ -31,11 +31,28 @@ id: observeOn
   jumps ahead of (and swallows) items emitted by the source Observable, as in the diagram above.
  </p></figcaption>
 </figure>
- <p>
+<figure>
+ <img src="images/schedulers.png" style="width:100%;" alt="ObserveOn and SubscribeOn" />
+ <figcaption><p>
   The <a href="subscribeon.html"><span class="operator">SubscribeOn</span></a> operator is similar, but it
   instructs the Observable to <em>itself</em> operate on the specified Scheduler, as well as notifying its
   observers on that Scheduler.
- </p>
+ </p><p>
+  By default, an Observable and the chain of operators that you apply to it will do its work, and will notify
+  its observers, on the same thread on which its <code>Subscribe</code> method is called. The
+  <span class="operator">SubscribeOn</span> operator changes this behavior by specifying a different Scheduler
+  on which the Observable should operate. The <span class="operator">ObserveOn</span> operator specifies a
+  different Scheduler that the Observable will use to send notifications to its observers.
+ </p><p>
+  As shown in this illustration, the <span class="operator">SubscribeOn</span> operator designates which thread
+  the Observable will begin operating on, no matter at what point in the chain of operators that operator is
+  called.  <span class="operator">ObserveOn</span>, on the other hand, affects the thread that the Observable
+  will use <em>below</em> where that operator appears.  For this reason, you may call 
+  <span class="operator">ObserveOn</span> multiple times at various points during the chain of Observable
+  operators in order to change on which threads certain of those operators operate.
+ </p></figcaption>
+</figure>
+
 
 <h4>See Also</h4>
 <ul>
