add links from D.Stoyanov's book to ReactiveX pages

--- a/documentation/operators/map.html
+++ b/documentation/operators/map.html
@@ -222,6 +222,10 @@ Completed</pre></div></figcaption>
       <li><code>rx.lite.js</code></li>
       <li><code>rx.lite.compat.js</code></li>
      </ul>
+     <h4>See Also</h4>
+     <ul>
+      <li><a href="http://xgrommx.github.io/rx-book/content/helpers/pluck.html"><code>Rx.helpers.pluck(property)</code></a> from Dennis Stoyanov&#8217;s RxJS book</li>
+     </ul>
   {% endlang_operator %}
 
   {% lang_operator RxKotlin cast map %}
