copy over changes from the develop branch

--- a/documentation/contract.html
+++ b/documentation/contract.html
@@ -254,6 +254,13 @@
  overflow.
 </p>
 
+<h2>See Also</h2>
+
+<ul>
+ <li><a href="https://go.microsoft.com/fwlink/?LinkID=205219"><cite>Rx Design Guidelines</cite></a></li>
+ <li><a href="http://xgrommx.github.io/rx-book/content/guidelines/index.html"><cite>RxJS Design Guidelines</cite></a></li>
+</ul>
+
     </div>
     <div class="col-sm-4">
     <ul class="side-menu">
