--- a/documentation/operators.html
+++ b/documentation/operators.html
@@ -603,6 +603,12 @@ Own Operators</a>.</p>
 </dl>
 </div>
 
+<h4>See Also</h4>
+
+<ul>
+ <li><a href="http://xgrommx.github.io/rx-book/content/which_operator_do_i_use/index.html">Which Operator do I use?</a> by Dennis Stoyanov (a similar decision tree, specific to RxJS operators)</li>
+</ul>
+
 <h1 id="alphabetical" style="clear: left;">An Alphabetical List of Observable Operators</h1>
 
 <p>Canonical, core operator names are in <strong>boldface</strong>. Other entries represent language-specific
