--- a/tutorials.html
+++ b/tutorials.html
@@ -211,7 +211,7 @@
 <h2 id="rxjs">RxJS</h2>
 
 <ul>
-<li><a href="http://xgrommx.github.io/rx-book/">RxJS GitBook</a></li>
+<li><a href="http://xgrommx.github.io/rx-book/index.html">RxJS - Javascript library for functional reactive programming</a>, an on-line book by Dennis Stoyanov</li>
 <li><a href="http://reactive-extensions.github.io/learnrx/">Learn RxJS</a> by Jafar Husain</li>
 <li><a href="https://github.com/mattpodwysocki/RxJSKoans">RxJS Koans</a> by Matt Podwysocki</li>
 <li><a href="https://www.youtube.com/watch?v=XRYN2xt11Ek">Netflix JavaScript Talks - Async JavaScript with Reactive Extensions</a> video of a talk by Jafar Husain about the Rx way of programming</li>
@@ -288,6 +288,7 @@
 <li><a href="http://go.microsoft.com/fwlink/?LinkID=205219">Rx Design Guidelines</a></li>
 <li><a href="http://msdn.microsoft.com/en-us/data/gg577611">Beginners Guide to Rx</a></li>
 <li><a href="http://www.reactivemanifesto.org/">Reactive Manifesto</a></li>
+<li><a href="http://mcxiaoke.gitbooks.io/rxdocs/content/">ReactiveX文档中文翻译</a> - the documentation from this site, translated into Chinese</li>
 </ul>
 
   </div>
