--- a/documentation/operators/delay.html
+++ b/documentation/operators/delay.html
@@ -239,8 +239,8 @@
       <figcaption><p>
        Another variant of <code>delay</code> does not use a constant delay duration, but sets its delay
        duration on a per-item basis by passing each item from the source Observable into a function that returns
-       an Observable and then monitoring those Observables. When any such Observable completes, the Observable
-       returned by <code>delay</code> emits the associated item.
+       an Observable and then monitoring those Observables. When any such Observable emits a item or completes,
+       the Observable returned by <code>delay</code> emits the associated item.
       </p><p>
        This variant of <code>delay</code> does not by default run on any particular
        <a href="../scheduler.html">Scheduler</a>.
@@ -340,8 +340,8 @@
       <figcaption><p>
        Another variant of <code>delay</code> does not use a constant delay duration, but sets its delay
        duration on a per-item basis by passing each item from the source Observable into a function that returns
-       an Observable and then monitoring those Observables. When any such Observable completes, the Observable
-       returned by <code>delay</code> emits the associated item.
+       an Observable and then monitoring those Observables. When any such Observable emits an item or completes,
+       the Observable returned by <code>delay</code> emits the associated item.
       </p><p>
        This variant of <code>delay</code> does not by default run on any particular
        <a href="../scheduler.html">Scheduler</a>.
