--- a/documentation/operators/do.html
+++ b/documentation/operators/do.html
@@ -293,7 +293,7 @@
     <figure class="variant">
      <img src="images/finallyDo.png" style="width:100%;" alt="finallyDo" />
      <figcaption><p>
-      The <code>doOnTerminate</code> operator registers an <code>Action</code> which will be called just
+      The <code>finallyDo</code> operator registers an <code>Action</code> which will be called just
       <em>after</em> the resulting Observable terminates, whether normally or with an error.
      </p>
      <h4>Sample Code</h4>
@@ -446,7 +446,7 @@ Error: Item exceeds maximum value</pre></div>
     <figure class="variant">
      <img src="images/finallyDo.png" style="width:100%;" alt="finallyDo" />
      <figcaption><p>
-      The <code>doOnTerminate</code> operator registers an <code>Action</code> which will be called just
+      The <code>finallyDo</code> operator registers an <code>Action</code> which will be called just
       <em>after</em> the resulting Observable terminates, whether normally or with an error.
      </p>
      <ul>
