--- a/documentation/operators/subscribeon.html
+++ b/documentation/operators/subscribeon.html
@@ -141,8 +141,8 @@
  <figcaption><p>
   Many implementations of ReactiveX use <a href="../scheduler.html">&ldquo;<code>Scheduler</code>s&rdquo;</a>
   to govern an Observable&#8217;s transitions between threads in a multi-threaded environment. You can instruct
-  an Observable to operate on a particular Scheduler by means of the <span class="operator">SubscribeOn</span>
-  operator.
+  an Observable to do its work on a particular Scheduler by calling the Observable&#8217;s
+  <span class="operator">SubscribeOn</span> operator.
  </p></figcaption>
 </figure>
  <p>
@@ -151,6 +151,23 @@
  </p><p>
   In some implementations there is also an <span class="operator">UnsubscribeOn</span> operator.
  </p>
+<figure>
+ <img src="images/schedulers.png" style="width:100%;" alt="ObserveOn and SubscribeOn" />
+ <figcaption><p>
+  By default, an Observable and the chain of operators that you apply to it will do its work, and will notify
+  its observers, on the same thread on which its <code>Subscribe</code> method is called. The
+  <span class="operator">SubscribeOn</span> operator changes this behavior by specifying a different Scheduler
+  on which the Observable should operate. The <span class="operator">ObserveOn</span> operator specifies a
+  different Scheduler that the Observable will use to send notifications to its observers.
+ </p><p>
+  As shown in this illustration, the <span class="operator">SubscribeOn</span> operator designates which thread
+  the Observable will begin operating on, no matter at what point in the chain of operators that operator is
+  called.  <span class="operator">ObserveOn</span>, on the other hand, affects the thread that the Observable
+  will use <em>below</em> where that operator appears.  For this reason, you may call
+  <span class="operator">ObserveOn</span> multiple times at various points during the chain of Observable
+  operators in order to change on which threads certain of those operators operate.
+ </p></figcaption>
+</figure>
 
 <h4>See Also</h4>
 <ul>
