--- a/documentation/scheduler.html
+++ b/documentation/scheduler.html
@@ -135,21 +135,32 @@
 </p><p>
  Some ReactiveX Observable operators have variants that take a Scheduler as a parameter. These instruct the
  operator to do some or all of its work on a particular Scheduler.
-</p><p>
- You can make an Observable act on a particular Scheduler by means of the
- <a href="operators/observeon.html"><span class="operator">ObserveOn</span></a> or
- <a href="operators/subscribeon.html"><span class="operator">SubscribeOn</span></a> operators.
- <span class="operator">ObserveOn</span> instructs an Observable to call its observer&#8217;s
- <code>onNext</code>, <code>onError</code>, and <code>onCompleted</code> methods on a particular Scheduler;
- <span class="operator">SubscribeOn</span> takes this a step further and instructs the Observable to do all of
- its processing (including the sending of items and notifications to observers) on a particular Scheduler.
 </p>
+
+<figure>
+ <figcaption><p>
+  By default, an Observable and the chain of operators that you apply to it will do its work, and will notify
+  its observers, on the same thread on which its <code>Subscribe</code> method is called. The
+  <span class="operator">SubscribeOn</span> operator changes this behavior by specifying a different Scheduler
+  on which the Observable should operate. The <span class="operator">ObserveOn</span> operator specifies a
+  different Scheduler that the Observable will use to send notifications to its observers.
+ </p><p>
+  As shown in this illustration, the <span class="operator">SubscribeOn</span> operator designates which thread
+  the Observable will begin operating on, no matter at what point in the chain of operators that operator is
+  called.  <span class="operator">ObserveOn</span>, on the other hand, affects the thread that the Observable
+  will use <em>below</em> where that operator appears.  For this reason, you may call 
+  <span class="operator">ObserveOn</span> multiple times at various points during the chain of Observable
+  operators in order to change on which threads certain of those operators operate.
+ </p></figcaption>
+ <img src="operators/images/schedulers.png" style="width:100%;" alt="ObserveOn and SubscribeOn" />
+</figure>
 
 <h4>See Also</h4>
 
 <ul>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/15_SchedulingAndThreading.html"><cite>Introduction to Rx</cite>: Scheduling and Threading</a></li>
  <li><a href="http://channel9.msdn.com/Series/Rx-Workshop/Rx-Workshop-Schedulers"><cite>Rx Workshop</cite>: Schedulers</a></li>
+ <li><a href="http://xgrommx.github.io/rx-book/content/getting_started_with_rxjs/scheduling_and_concurrency.html">Using Schedulers</a> by Dennis Stoyanov</li>
 </ul>
 
 <h2>Language-Specific Information:</h2>
@@ -529,6 +540,7 @@ someScheduler.schedulePeriodically(someAction, 500, 250, TimeUnit.MILLISECONDS);
     <h4>See Also</h4>
     <ul>
      <li><a href="http://stackoverflow.com/questions/28145890/what-is-a-scheduler-in-rxjs"><cite>StackOverflow</cite>: What is a &ldquo;Scheduler&rdquo; in RxJS</a></li>
+     <li><a href="http://xgrommx.github.io/rx-book/content/schedulers/index.html">Schedulers</a> by Dennis Stoyanov</a></li>
     </ul>
   
           </div>
