adding external links mostly

--- a/documentation/operators/from.html
+++ b/documentation/operators/from.html
@@ -34,6 +34,7 @@ id: from
  <li><a href="just.html"><span class="operator">Just</span></a></li>
  <li><a href="start.html"><span class="operator">Start</span></a></li>
  <li><a href="http://rxwiki.wikidot.com/101samples#toc5"><cite>101 Rx Samples</cite>: Observation Operators</a></li>
+ <li><a href="https://www.youtube.com/watch?v=sDqrlNprY24">RxJava Tutorial 03: Observable from, just, &amp; create methods</a></li>
 </ul>
 
 <h2>Language-Specific Information:</h2>
