--- a/documentation/operators/just.html
+++ b/documentation/operators/just.html
@@ -39,6 +39,7 @@ id: just
  <li><a href="start.html"><span class="operator">Start</span></a></li>
  <li><a href="timer.html"><span class="operator">Timer</span></a></li>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/04_CreatingObservableSequences.html#ObservableReturn"><cite>Introduction to Rx</cite>: Return</a></li>
+ <li><a href="https://www.youtube.com/watch?v=sDqrlNprY24">RxJava Tutorial 03: Observable from, just, &amp; create methods</a></li>
 </ul>
 
 <h2>Language-Specific Information:</h2>
