Adding several more external links

--- a/documentation/operators/reduce.html
+++ b/documentation/operators/reduce.html
@@ -32,6 +32,7 @@ id: reduce
     <li><a href="scan.html"><span class="operator">Scan</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#Aggregate"><cite>Introduction to Rx</cite>: Aggregate</a></li>
     <li><a href="http://rxmarbles.com/#reduce">RxMarbles: <code>reduce</code></a></li>
+    <li><a href="http://blog.joanzapata.com/experimentation-with-rx/">Experimentation with RxJava</a> by Joan Zapata</li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
