copying over changes from develop branch

--- a/documentation/operators.html
+++ b/documentation/operators.html
@@ -603,7 +603,7 @@ Own Operators</a>.</p>
 </dl>
 </div>
 
-<h4>See Also</h4>
+<h4 style="clear:both;">See Also</h4>
 
 <ul>
  <li><a href="http://xgrommx.github.io/rx-book/content/which_operator_do_i_use/index.html">Which Operator do I use?</a> by Dennis Stoyanov (a similar decision tree, specific to RxJS operators)</li>
