--- a/documentation/operators/create.html
+++ b/documentation/operators/create.html
@@ -155,6 +155,7 @@
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/04_CreatingObservableSequences.html#ObservableCreate"><cite>Introduction to Rx</cite>: Create</a></li>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/04_CreatingObservableSequences.html#ObservableGenerate"><cite>Introduction to Rx</cite>: Generate</a></li>
  <li><a href="http://rxwiki.wikidot.com/101samples#toc42"><cite>101 Rx Samples</cite>: Generate</a></li>
+ <li><a href="https://www.youtube.com/watch?v=sDqrlNprY24">RxJava Tutorial 03: Observable from, just, &amp; create methods</a></li>
 </ul>
 
 <h2>Language-Specific Information:</h2>
