--- a/documentation/operators/switch.html
+++ b/documentation/operators/switch.html
@@ -68,7 +68,7 @@ id: switch
     <figure class="variant">
      <img src="images/switchDo.png" style="width:100%;" alt="switch" />
      <figcaption><p>
-      RxGroovy implements this operator as <code>switchOnNext</code>. It does not by default operate on any
+      RxJava implements this operator as <code>switchOnNext</code>. It does not by default operate on any
       particular <a href="../scheduler.html">Scheduler</a>.
      </p>
      <ul>
