--- a/documentation/operators/defaultifempty.html
+++ b/documentation/operators/defaultifempty.html
@@ -219,9 +219,9 @@
       </ul></figcaption>
      </figure>
      <p>
-      There is also a new, experimental operator (not available in RxGroovy 1.0.0) called
-      <code>switchIfEmpty</code> that, rather than emitting a backup <em>value</em> if the source Observable
-      terminates without having emitted any items, it emits the emissions from a backup <em>Observable</em>.
+      There is also a new operator in RxGroovy 1.1 called <code>switchIfEmpty</code> that, rather than emitting a
+      backup <em>value</em> if the source Observable terminates without having emitted any items, it emits the
+      emissions from a backup <em>Observable</em>.
      </p>
   
           </div>
@@ -252,9 +252,9 @@
       </ul></figcaption>
      </figure>
      <p>
-      There is also a new, experimental operator (not available in RxJava 1.0.0) called
-      <code>switchIfEmpty</code> that, rather than emitting a backup <em>value</em> if the source Observable
-      terminates without having emitted any items, it emits the emissions from a backup <em>Observable</em>.
+      There is also a new operator in RxJava 1.1 called <code>switchIfEmpty</code> that, rather than emitting a
+      backup <em>value</em> if the source Observable terminates without having emitted any items, it emits the
+      emissions from a backup <em>Observable</em>.
      </p>
   
           </div>
