--- a/documentation/operators/defaultifempty.html
+++ b/documentation/operators/defaultifempty.html
@@ -55,8 +55,8 @@ id: defaultIfEmpty
       </ul></figcaption>
      </figure>
      <p>
-      There is also a new operator RxGroovy 1.1 called <code>switchIfEmpty</code> that, rather than emitting a
-      backup <em>value</em> if the source Observable terminates without having emitted any items, it emits the
+      There is also a new operator in RxGroovy 1.1 called <code>switchIfEmpty</code> that, rather than emitting
+      a backup <em>value</em> if the source Observable terminates without having emitted any items, it emits the
       emissions from a backup <em>Observable</em>.
      </p>
   {% endlang_operator %}
