New operators in RxSwift 2.0

--- a/documentation/operators/buffer.html
+++ b/documentation/operators/buffer.html
@@ -995,4 +995,10 @@ Observable&lt;List&lt;Integer&gt;&gt; burstyBuffered = burstyMulticast.buffer(bu
    </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift buffer %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
