--- a/documentation/operators/do.html
+++ b/documentation/operators/do.html
@@ -493,7 +493,7 @@ Finally</pre></div>
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxSwift do %}
+  {% lang_operator RxSwift doOn %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
