--- a/documentation/operators/first.html
+++ b/documentation/operators/first.html
@@ -752,4 +752,10 @@ Completed
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift single %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
