--- a/documentation/operators/map.html
+++ b/documentation/operators/map.html
@@ -254,7 +254,7 @@ Completed</pre></div></figcaption>
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxSwift map %}
+  {% lang_operator RxSwift map mapWithIndex %}
      <p>
       <span style="color:#ff0000">TBD</span>
      </p>
