--- a/documentation/operators/observeon.html
+++ b/documentation/operators/observeon.html
@@ -156,7 +156,7 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxSwift observeOn observeSingleOn %}
+  {% lang_operator RxSwift observeOn %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
