--- a/documentation/operators/reduce.html
+++ b/documentation/operators/reduce.html
@@ -257,7 +257,7 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxSwift reduce aggregate %}
+  {% lang_operator RxSwift reduce %}
      <p>
       <span style="color:#ff0000">TBD</span>
      </p>
