--- a/documentation/operators/retry.html
+++ b/documentation/operators/retry.html
@@ -349,7 +349,7 @@ subscribing</pre></div>
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxSwift retry %}
+  {% lang_operator RxSwift retry retryWhen %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
