--- a/documentation/operators/sample.html
+++ b/documentation/operators/sample.html
@@ -338,7 +338,7 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxSwift sample %}
+  {% lang_operator RxSwift sample sampleLatest %}
      <p>
       <span style="color:#ff0000">TBD</span>
      </p>
