--- a/documentation/operators/skip.html
+++ b/documentation/operators/skip.html
@@ -239,4 +239,10 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift skip %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
