--- a/documentation/operators/takewhile.html
+++ b/documentation/operators/takewhile.html
@@ -180,7 +180,7 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxSwift takeWhile %}
+  {% lang_operator RxSwift takeWhile takeWhileWithIndex %}
      <p>
       <span style="color:#ff0000">TBD</span>
      </p>
