--- a/documentation/operators/using.html
+++ b/documentation/operators/using.html
@@ -191,4 +191,10 @@ Disposed</pre></div>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift using %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
