--- a/documentation/operators/create.html
+++ b/documentation/operators/create.html
@@ -374,7 +374,7 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxSwift create %}
+  {% lang_operator RxSwift create generate %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
