--- a/documentation/operators/elementat.html
+++ b/documentation/operators/elementat.html
@@ -215,4 +215,10 @@ Completed</pre></div></figcaption>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift elementAt %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
