--- a/documentation/operators/refcount.html
+++ b/documentation/operators/refcount.html
@@ -218,7 +218,7 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxSwift refCount %}
+  {% lang_operator RxSwift refCount share %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
