--- a/documentation/operators/replay.html
+++ b/documentation/operators/replay.html
@@ -320,7 +320,7 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxSwift replay %}
+  {% lang_operator RxSwift replay shareReplay %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
