--- a/documentation/operators/skipwhile.html
+++ b/documentation/operators/skipwhile.html
@@ -178,4 +178,10 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift skipWhile skipWhileWithIndex %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
