--- a/documentation/operators/takelast.html
+++ b/documentation/operators/takelast.html
@@ -375,4 +375,10 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift takeLast %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
