--- a/documentation/operators/to.html
+++ b/documentation/operators/to.html
@@ -500,4 +500,10 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift toArray %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
 </div>
