--- a/documentation/operators/timeout.html
+++ b/documentation/operators/timeout.html
@@ -491,4 +491,10 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift timeout %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
