Update RxScala doc to 0.26.0

--- a/rxscala/scaladoc/rx/lang/scala/observables/package.html
+++ b/rxscala/scaladoc/rx/lang/scala/observables/package.html
@@ -54,7 +54,7 @@ in Scala, because we use a pair <code>(key, observable)</code> instead of <code>
 and a pair <code>(startFunction, observable)</code> instead of <code>ConnectableObservable</code>.
 </p></div><div class="toggleContainer block">
           <span class="toggle">Linear Supertypes</span>
-          <div class="superTypes hiddenContent"><span class="extype" name="scala.AnyRef">AnyRef</span>, <span class="extype" name="scala.Any">Any</span></div>
+          <div class="superTypes hiddenContent"><a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.AnyRef" class="extype" target="_top">AnyRef</a>, <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Any" class="extype" target="_top">Any</a></div>
         </div></div>
         
 
@@ -103,15 +103,14 @@ and a pair <code>(startFunction, observable)</code> instead of <code>Connectable
         <span class="kind">class</span>
       </span>
       <span class="symbol">
-        <a href="BlockingObservable.html"><span class="name">BlockingObservable</span></a><span class="tparams">[<span name="T">+T</span>]</span><span class="result"> extends <span class="extype" name="scala.AnyVal">AnyVal</span></span>
+        <a href="BlockingObservable.html"><span class="name">BlockingObservable</span></a><span class="tparams">[<span name="T">+T</span>]</span><span class="result"> extends <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.AnyVal" class="extype" target="_top">AnyVal</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../../index.html#rx.lang.scala.observables.package@BlockingObservable[+T]extendsAnyVal" title="Permalink" target="_top">
         <img src="../../../../lib/permalink.png" />
       </a>
     </span>
-      <p class="shortcomment cmt">An Observable that provides blocking operators.</p><div class="fullcomment"><div class="comment cmt"><p>An Observable that provides blocking operators.</p><p>You can obtain a BlockingObservable from an Observable using <a href="../Observable.html#toBlocking:rx.lang.scala.observables.BlockingObservable[T]" class="extmbr" name="rx.lang.scala.Observable#toBlocking">rx.lang.scala.Observable.toBlocking</a>
-</p></div></div>
+      <p class="shortcomment cmt">An Observable that provides blocking operators.</p><div class="fullcomment"><div class="comment cmt"><p>An Observable that provides blocking operators.</p><p>You can obtain a BlockingObservable from an Observable using <a href="../Observable.html#toBlocking:rx.lang.scala.observables.BlockingObservable[T]" class="extmbr" name="rx.lang.scala.Observable#toBlocking">rx.lang.scala.Observable.toBlocking</a></p></div></div>
     </li><li name="rx.lang.scala.observables.ConnectableObservable" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="ConnectableObservable[+T]extendsObservable[T]"></a>
       <a id="ConnectableObservable[+T]:ConnectableObservable[T]"></a>
@@ -143,9 +142,9 @@ and a pair <code>(startFunction, observable)</code> instead of <code>Connectable
 
         <div id="inheritedMembers">
         <div class="parent" name="scala.AnyRef">
-              <h3>Inherited from <span class="extype" name="scala.AnyRef">AnyRef</span></h3>
+              <h3>Inherited from <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.AnyRef" class="extype" target="_top">AnyRef</a></h3>
             </div><div class="parent" name="scala.Any">
-              <h3>Inherited from <span class="extype" name="scala.Any">Any</span></h3>
+              <h3>Inherited from <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Any" class="extype" target="_top">Any</a></h3>
             </div>
         
         </div>
