--- a/rxscala/scaladoc/rx/lang/scala/Observer.html
+++ b/rxscala/scaladoc/rx/lang/scala/Observer.html
@@ -47,7 +47,7 @@
         <span class="kind">trait</span>
       </span>
       <span class="symbol">
-        <span class="name">Observer</span><span class="tparams">[<span name="T">-T</span>]</span><span class="result"> extends <span class="extype" name="scala.AnyRef">AnyRef</span></span>
+        <span class="name">Observer</span><span class="tparams">[<span name="T">-T</span>]</span><span class="result"> extends <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.AnyRef" class="extype" target="_top">AnyRef</a></span>
       </span>
       </h4>
       
@@ -55,7 +55,7 @@
 calls the Observer's <code>onNext</code> method to provide notifications. A well-behaved Observable will
 call an Observer's <code>onCompleted</code> or <code>onError</code> methods exactly once.</p></div><div class="toggleContainer block">
           <span class="toggle">Linear Supertypes</span>
-          <div class="superTypes hiddenContent"><span class="extype" name="scala.AnyRef">AnyRef</span>, <span class="extype" name="scala.Any">Any</span></div>
+          <div class="superTypes hiddenContent"><a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.AnyRef" class="extype" target="_top">AnyRef</a>, <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Any" class="extype" target="_top">Any</a></div>
         </div><div class="toggleContainer block">
             <span class="toggle">Known Subclasses</span>
             <div class="subClasses hiddenContent"><a href="subjects/AsyncSubject.html" class="extype" name="rx.lang.scala.subjects.AsyncSubject">AsyncSubject</a>, <a href="subjects/BehaviorSubject.html" class="extype" name="rx.lang.scala.subjects.BehaviorSubject">BehaviorSubject</a>, <a href="subjects/ReplaySubject.html" class="extype" name="rx.lang.scala.subjects.ReplaySubject">ReplaySubject</a>, <a href="subjects/SerializedSubject.html" class="extype" name="rx.lang.scala.subjects.SerializedSubject">SerializedSubject</a>, <a href="Subject.html" class="extype" name="rx.lang.scala.Subject">Subject</a>, <a href="Subscriber.html" class="extype" name="rx.lang.scala.Subscriber">Subscriber</a>, <a href="subjects/TestSubject.html" class="extype" name="rx.lang.scala.subjects.TestSubject">TestSubject</a>, <a href="observers/TestSubscriber.html" class="extype" name="rx.lang.scala.observers.TestSubscriber">TestSubscriber</a></div>
@@ -111,7 +111,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span title="gt4s: $bang$eq" class="name">!=</span><span class="params">(<span name="arg0">arg0: <span class="extype" name="scala.Any">Any</span></span>)</span><span class="result">: <span class="extype" name="scala.Boolean">Boolean</span></span>
+        <span title="gt4s: $bang$eq" class="name">!=</span><span class="params">(<span name="arg0">arg0: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Any" class="extype" target="_top">Any</a></span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Boolean" class="extype" target="_top">Boolean</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@!=(x$1:Any):Boolean" title="Permalink" target="_top">
@@ -128,7 +128,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span title="gt4s: $hash$hash" class="name">##</span><span class="params">()</span><span class="result">: <span class="extype" name="scala.Int">Int</span></span>
+        <span title="gt4s: $hash$hash" class="name">##</span><span class="params">()</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Int" class="extype" target="_top">Int</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@##():Int" title="Permalink" target="_top">
@@ -145,7 +145,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span title="gt4s: $eq$eq" class="name">==</span><span class="params">(<span name="arg0">arg0: <span class="extype" name="scala.Any">Any</span></span>)</span><span class="result">: <span class="extype" name="scala.Boolean">Boolean</span></span>
+        <span title="gt4s: $eq$eq" class="name">==</span><span class="params">(<span name="arg0">arg0: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Any" class="extype" target="_top">Any</a></span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Boolean" class="extype" target="_top">Boolean</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@==(x$1:Any):Boolean" title="Permalink" target="_top">
@@ -179,7 +179,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">clone</span><span class="params">()</span><span class="result">: <span class="extype" name="scala.AnyRef">AnyRef</span></span>
+        <span class="name">clone</span><span class="params">()</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.AnyRef" class="extype" target="_top">AnyRef</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@clone():Object" title="Permalink" target="_top">
@@ -202,7 +202,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">eq</span><span class="params">(<span name="arg0">arg0: <span class="extype" name="scala.AnyRef">AnyRef</span></span>)</span><span class="result">: <span class="extype" name="scala.Boolean">Boolean</span></span>
+        <span class="name">eq</span><span class="params">(<span name="arg0">arg0: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.AnyRef" class="extype" target="_top">AnyRef</a></span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Boolean" class="extype" target="_top">Boolean</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@eq(x$1:AnyRef):Boolean" title="Permalink" target="_top">
@@ -219,7 +219,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">equals</span><span class="params">(<span name="arg0">arg0: <span class="extype" name="scala.Any">Any</span></span>)</span><span class="result">: <span class="extype" name="scala.Boolean">Boolean</span></span>
+        <span class="name">equals</span><span class="params">(<span name="arg0">arg0: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Any" class="extype" target="_top">Any</a></span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Boolean" class="extype" target="_top">Boolean</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@equals(x$1:Any):Boolean" title="Permalink" target="_top">
@@ -236,7 +236,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">finalize</span><span class="params">()</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
+        <span class="name">finalize</span><span class="params">()</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@finalize():Unit" title="Permalink" target="_top">
@@ -259,7 +259,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">getClass</span><span class="params">()</span><span class="result">: <span class="extype" name="java.lang.Class">Class</span>[_]</span>
+        <span class="name">getClass</span><span class="params">()</span><span class="result">: <a href=http://docs.oracle.com/javase/8/docs/api/index.html?java/lang/Class.html class="extype" target="_top">Class</a>[_]</span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@getClass():Class[_]" title="Permalink" target="_top">
@@ -276,7 +276,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">hashCode</span><span class="params">()</span><span class="result">: <span class="extype" name="scala.Int">Int</span></span>
+        <span class="name">hashCode</span><span class="params">()</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Int" class="extype" target="_top">Int</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@hashCode():Int" title="Permalink" target="_top">
@@ -293,7 +293,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">isInstanceOf</span><span class="tparams">[<span name="T0">T0</span>]</span><span class="result">: <span class="extype" name="scala.Boolean">Boolean</span></span>
+        <span class="name">isInstanceOf</span><span class="tparams">[<span name="T0">T0</span>]</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Boolean" class="extype" target="_top">Boolean</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@isInstanceOf[T0]:Boolean" title="Permalink" target="_top">
@@ -310,7 +310,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">ne</span><span class="params">(<span name="arg0">arg0: <span class="extype" name="scala.AnyRef">AnyRef</span></span>)</span><span class="result">: <span class="extype" name="scala.Boolean">Boolean</span></span>
+        <span class="name">ne</span><span class="params">(<span name="arg0">arg0: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.AnyRef" class="extype" target="_top">AnyRef</a></span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Boolean" class="extype" target="_top">Boolean</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@ne(x$1:AnyRef):Boolean" title="Permalink" target="_top">
@@ -327,7 +327,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">notify</span><span class="params">()</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
+        <span class="name">notify</span><span class="params">()</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@notify():Unit" title="Permalink" target="_top">
@@ -344,7 +344,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">notifyAll</span><span class="params">()</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
+        <span class="name">notifyAll</span><span class="params">()</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@notifyAll():Unit" title="Permalink" target="_top">
@@ -361,7 +361,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">onCompleted</span><span class="params">()</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
+        <span class="name">onCompleted</span><span class="params">()</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@onCompleted():Unit" title="Permalink" target="_top">
@@ -379,7 +379,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">onError</span><span class="params">(<span name="error">error: <span class="extype" name="scala.Throwable">Throwable</span></span>)</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
+        <span class="name">onError</span><span class="params">(<span name="error">error: <span class="extype" name="scala.Throwable">Throwable</span></span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@onError(error:Throwable):Unit" title="Permalink" target="_top">
@@ -397,7 +397,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">onNext</span><span class="params">(<span name="value">value: <span class="extype" name="rx.lang.scala.Observer.T">T</span></span>)</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
+        <span class="name">onNext</span><span class="params">(<span name="value">value: <span class="extype" name="rx.lang.scala.Observer.T">T</span></span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@onNext(value:T):Unit" title="Permalink" target="_top">
@@ -432,7 +432,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">toString</span><span class="params">()</span><span class="result">: <span class="extype" name="java.lang.String">String</span></span>
+        <span class="name">toString</span><span class="params">()</span><span class="result">: <a href=http://docs.oracle.com/javase/8/docs/api/index.html?java/lang/String.html class="extype" target="_top">String</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@toString():String" title="Permalink" target="_top">
@@ -449,7 +449,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">wait</span><span class="params">()</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
+        <span class="name">wait</span><span class="params">()</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@wait():Unit" title="Permalink" target="_top">
@@ -472,7 +472,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">wait</span><span class="params">(<span name="arg0">arg0: <span class="extype" name="scala.Long">Long</span></span>, <span name="arg1">arg1: <span class="extype" name="scala.Int">Int</span></span>)</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
+        <span class="name">wait</span><span class="params">(<span name="arg0">arg0: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Long" class="extype" target="_top">Long</a></span>, <span name="arg1">arg1: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Int" class="extype" target="_top">Int</a></span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@wait(x$1:Long,x$2:Int):Unit" title="Permalink" target="_top">
@@ -495,7 +495,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">wait</span><span class="params">(<span name="arg0">arg0: <span class="extype" name="scala.Long">Long</span></span>)</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
+        <span class="name">wait</span><span class="params">(<span name="arg0">arg0: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Long" class="extype" target="_top">Long</a></span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer@wait(x$1:Long):Unit" title="Permalink" target="_top">
@@ -519,9 +519,9 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
 
         <div id="inheritedMembers">
         <div class="parent" name="scala.AnyRef">
-              <h3>Inherited from <span class="extype" name="scala.AnyRef">AnyRef</span></h3>
+              <h3>Inherited from <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.AnyRef" class="extype" target="_top">AnyRef</a></h3>
             </div><div class="parent" name="scala.Any">
-              <h3>Inherited from <span class="extype" name="scala.Any">Any</span></h3>
+              <h3>Inherited from <a href="http://www.scala-lang.org/api/2.11.6/index.html#scala.Any" class="extype" target="_top">Any</a></h3>
             </div>
         
         </div>
