--- a/documentation/operators/zip.html
+++ b/documentation/operators/zip.html
@@ -255,7 +255,7 @@ Completed</pre></div>
      <figure>
       <img src="images/forkJoin.png" style="width:100%;" alt="forkJoin" />
       <figcaption><p>
-       RxJS also implements a similar operator, <code>forkJoin</code>. There are two varities of this
+       RxJS also implements a similar operator, <code>forkJoin</code>. There are two varieties of this
        operator. The first collects the last element emitted by each of the source Observables into an array and
        emits this array as its own sole emitted item. You can either pass a list of Observables to
        <code>forkJoin</code> as individual parameters or as an array of Observables.
