Fixed missing variable.
Updated to match RxJS docs found at https://github.com/Reactive-Extensions/RxJS/blob/master/doc/api/core/operators/from.md

--- a/documentation/operators/from.html
+++ b/documentation/operators/from.html
@@ -289,7 +289,9 @@ Next: 2
 Next: 3
 Completed</pre></div>
      <div class="code javascript"><pre>
- = new Set(["foo", window]);
+// Any iterable object...
+// Set
+var s = new Set(['foo', window]);
 Rx.Observable.from(s).subscribe(
   function (x) { console.log('Next: ' + x); },
   function (err) { console.log('Error: ' + err); },
